// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dropdown basic 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-fjdhpX hIxaWA"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Wybierz...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-2-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        >
          <span
            className="css-d8oujb react-select__indicator-separator"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw react-select__indicator react-select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown custom placeholder 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-fjdhpX hIxaWA"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Custom Placeholder Text
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-6-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        >
          <span
            className="css-d8oujb react-select__indicator-separator"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw react-select__indicator react-select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown disabled 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-1sontr1 sc-fjdhpX hIxaWA react-select--is-disabled"
      onKeyDown={[Function]}
    >
      <div
        className="css-162g8z5 react-select__control react-select__control--is-disabled"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Wybierz...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={true}
                id="react-select-3-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        >
          <span
            className="css-ln5n5c react-select__indicator-separator"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw react-select__indicator react-select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown error 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-fjdhpX liBRBy"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Wybierz...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-5-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        >
          <span
            className="css-d8oujb react-select__indicator-separator"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw react-select__indicator react-select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-iwsKbI bHwwIc"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-exclamation-circle fa-w-16 "
        data-icon="exclamation-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
       
      <span>
        Error message
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown info 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-fjdhpX hIxaWA"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Wybierz...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-4-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        >
          <span
            className="css-d8oujb react-select__indicator-separator"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw react-select__indicator react-select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-iwsKbI kCXkKZ"
    >
      <span>
        Additional info
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown multi 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-fjdhpX hIxaWA"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container react-select__value-container--is-multi"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Wybierz...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-8-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        >
          <span
            className="css-d8oujb react-select__indicator-separator"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw react-select__indicator react-select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown w/ default 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-fjdhpX hIxaWA"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container react-select__value-container--has-value"
        >
          <div
            className="css-xp4uvy react-select__single-value"
          >
            DS
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-7-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        >
          <span
            className="css-d8oujb react-select__indicator-separator"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw react-select__indicator react-select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FileHandler basic 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div />
</div>
`;

exports[`Storyshots FileHandler empty 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <div>
      <div
        className="Button__ButtonContainer-sc-1dwmp9w-1 ddVAWt"
      >
        <button
          className="Button-sc-1dwmp9w-0 gqkcJ"
          onClick={[Function]}
        >
          Wybierz pliki
        </button>
        <button
          className="Button-sc-1dwmp9w-0 kNFHWw"
          disabled={true}
          onClick={[Function]}
        >
          Usuń wszystkie
        </button>
      </div>
      <div
        className="FileHandler__FileHandlerContainer-rqohhy-0 gimaJV"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <input
          accept="image/jpeg,image/png"
          autoComplete="off"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="FileHandler__EmptyState-rqohhy-2 hwNemM"
        >
          Wybierz lub przeciągnij pliki
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots FileHandler error 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <div>
      <div
        className="Button__ButtonContainer-sc-1dwmp9w-1 ddVAWt"
      >
        <button
          className="Button-sc-1dwmp9w-0 gqkcJ"
          onClick={[Function]}
        >
          Wybierz pliki
        </button>
        <button
          className="Button-sc-1dwmp9w-0 kNFHWw"
          disabled={true}
          onClick={[Function]}
        >
          Usuń wszystkie
        </button>
      </div>
      <div
        className="FileHandler__FileHandlerContainer-rqohhy-0 gimaJV"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <input
          accept="image/jpeg,image/png"
          autoComplete="off"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="FileHandler__EmptyState-rqohhy-2 hwNemM"
        >
          Wybierz lub przeciągnij pliki
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots FileHandler with items 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <div>
      <div
        className="Button__ButtonContainer-sc-1dwmp9w-1 ddVAWt"
      >
        <button
          className="Button-sc-1dwmp9w-0 gqkcJ"
          onClick={[Function]}
        >
          Dodaj pliki
        </button>
        <button
          className="Button-sc-1dwmp9w-0 gqkcJ"
          disabled={false}
          onClick={[Function]}
        >
          Usuń wszystkie
        </button>
      </div>
      <div
        className="FileHandler__FileHandlerContainer-rqohhy-0 fOHlEb"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <input
          accept="image/jpeg,image/png"
          autoComplete="off"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="Ratio "
          style={
            Object {
              "display": "block",
            }
          }
        >
          <div
            className="Ratio-ratio "
            style={
              Object {
                "height": 0,
                "paddingTop": "116.66666666666667%",
                "position": "relative",
                "width": "100%",
              }
            }
          >
            <div
              className="Ratio-content "
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <div
                className="FileItem__Thumbnail-sc-1nfnkxh-0 fANSbY"
              >
                <div
                  className="FileItem__IndicatorsContainer-sc-1nfnkxh-3 ikjGki"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-star fa-w-18 FileItem__IndicatorIcon-sc-1nfnkxh-2 crcyGx"
                    color="var(--accent50)"
                    data-icon="star"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 576 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </div>
                <img
                  alt=""
                  src="https://picsum.photos/250/250/"
                />
                <div
                  className="overlay"
                >
                  <div
                    className="FileItem__IconContainer-sc-1nfnkxh-1 kJsbhR"
                    onClick={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-star fa-w-18 fa-2x "
                      data-icon="star"
                      data-prefix="far"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                    <p
                      className="StyledComponents__TextBlock-sc-1sq26gf-0 hSaDBw"
                    >
                      Główne
                    </p>
                  </div>
                  <div
                    className="FileItem__IconContainer-sc-1nfnkxh-1 kJsbhR"
                    onClick={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-trash fa-w-14 fa-2x "
                      data-icon="trash"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                    <p
                      className="StyledComponents__TextBlock-sc-1sq26gf-0 hSaDBw"
                    >
                      Usuń
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="Ratio "
          style={
            Object {
              "display": "block",
            }
          }
        >
          <div
            className="Ratio-ratio "
            style={
              Object {
                "height": 0,
                "paddingTop": "116.66666666666667%",
                "position": "relative",
                "width": "100%",
              }
            }
          >
            <div
              className="Ratio-content "
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <div
                className="FileItem__Thumbnail-sc-1nfnkxh-0 fANSbY"
              >
                <div
                  className="FileItem__IndicatorsContainer-sc-1nfnkxh-3 ikjGki"
                />
                <img
                  alt=""
                  src="https://picsum.photos/300/250/"
                />
                <div
                  className="overlay"
                >
                  <div
                    className="FileItem__IconContainer-sc-1nfnkxh-1 kJsbhR"
                    onClick={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-star fa-w-18 fa-2x "
                      data-icon="star"
                      data-prefix="far"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                    <p
                      className="StyledComponents__TextBlock-sc-1sq26gf-0 hSaDBw"
                    >
                      Główne
                    </p>
                  </div>
                  <div
                    className="FileItem__IconContainer-sc-1nfnkxh-1 kJsbhR"
                    onClick={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-trash fa-w-14 fa-2x "
                      data-icon="trash"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                    <p
                      className="StyledComponents__TextBlock-sc-1sq26gf-0 hSaDBw"
                    >
                      Usuń
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="Ratio "
          style={
            Object {
              "display": "block",
            }
          }
        >
          <div
            className="Ratio-ratio "
            style={
              Object {
                "height": 0,
                "paddingTop": "116.66666666666667%",
                "position": "relative",
                "width": "100%",
              }
            }
          >
            <div
              className="Ratio-content "
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <div
                className="FileItem__Thumbnail-sc-1nfnkxh-0 fANSbY"
              >
                <div
                  className="FileItem__IndicatorsContainer-sc-1nfnkxh-3 ikjGki"
                />
                <img
                  alt=""
                  src="https://picsum.photos/250/300/"
                />
                <div
                  className="overlay"
                >
                  <div
                    className="FileItem__IconContainer-sc-1nfnkxh-1 kJsbhR"
                    onClick={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-star fa-w-18 fa-2x "
                      data-icon="star"
                      data-prefix="far"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                    <p
                      className="StyledComponents__TextBlock-sc-1sq26gf-0 hSaDBw"
                    >
                      Główne
                    </p>
                  </div>
                  <div
                    className="FileItem__IconContainer-sc-1nfnkxh-1 kJsbhR"
                    onClick={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-trash fa-w-14 fa-2x "
                      data-icon="trash"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                    <p
                      className="StyledComponents__TextBlock-sc-1sq26gf-0 hSaDBw"
                    >
                      Usuń
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots FileItem basic 1`] = `
<div
  style={
    Object {
      "margin": "40px",
      "width": "150px",
    }
  }
>
  <div
    className="Ratio "
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="Ratio-ratio "
      style={
        Object {
          "height": 0,
          "paddingTop": "116.66666666666667%",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        className="Ratio-content "
        style={
          Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="FileItem__Thumbnail-sc-1nfnkxh-0 fANSbY"
        >
          <img
            alt=""
            src="  https://picsum.photos/250/250/?random"
          />
          <div
            className="overlay"
          >
            <div>
              <div
                className="Icon__IconContainer-r3cjo2-0 jePlGP"
                fontSize="3rem"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
              <p
                className="StyledComponents__TextBlock-sc-1sq26gf-0 hSaDBw"
              >
                Główne
              </p>
            </div>
            <div
              onClick={[Function]}
            >
              <div
                className="Icon__IconContainer-r3cjo2-0 jePlGP"
                fontSize="3rem"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-trash fa-w-14 "
                  data-icon="trash"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
              <p
                className="StyledComponents__TextBlock-sc-1sq26gf-0 hSaDBw"
              >
                Usuń
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FileItem error 1`] = `
<div
  style={
    Object {
      "margin": "40px",
      "width": "150px",
    }
  }
>
  <div
    className="Ratio "
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="Ratio-ratio "
      style={
        Object {
          "height": 0,
          "paddingTop": "116.66666666666667%",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        className="Ratio-content "
        style={
          Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="FileItem__Thumbnail-sc-1nfnkxh-0 fANSbY"
        >
          <img
            alt=""
            src="  https://picsum.photos/250/250/?random"
          />
          <div
            className="overlay"
          >
            <div>
              <div
                className="Icon__IconContainer-r3cjo2-0 jePlGP"
                fontSize="3rem"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
              <p
                className="StyledComponents__TextBlock-sc-1sq26gf-0 hSaDBw"
              >
                Główne
              </p>
            </div>
            <div
              onClick={[Function]}
            >
              <div
                className="Icon__IconContainer-r3cjo2-0 jePlGP"
                fontSize="3rem"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-trash fa-w-14 "
                  data-icon="trash"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
              <p
                className="StyledComponents__TextBlock-sc-1sq26gf-0 hSaDBw"
              >
                Usuń
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FileItem isMain 1`] = `
<div
  style={
    Object {
      "margin": "40px",
      "width": "150px",
    }
  }
>
  <div
    className="Ratio "
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="Ratio-ratio "
      style={
        Object {
          "height": 0,
          "paddingTop": "116.66666666666667%",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        className="Ratio-content "
        style={
          Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="FileItem__Thumbnail-sc-1nfnkxh-0 fANSbY"
        >
          <img
            alt=""
            src="  https://picsum.photos/250/250/?random"
          />
          <div
            className="overlay"
          >
            <div
              className="FileItem__IconContainer-sc-1nfnkxh-1 kJsbhR"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star fa-w-18 fa-2x "
                data-icon="star"
                data-prefix="far"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              <p
                className="StyledComponents__TextBlock-sc-1sq26gf-0 hSaDBw"
              >
                Główne
              </p>
            </div>
            <div
              className="FileItem__IconContainer-sc-1nfnkxh-1 kJsbhR"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-trash fa-w-14 fa-2x "
                data-icon="trash"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              <p
                className="StyledComponents__TextBlock-sc-1sq26gf-0 hSaDBw"
              >
                Usuń
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FileItem main + error 1`] = `
<div
  style={
    Object {
      "margin": "40px",
      "width": "150px",
    }
  }
>
  <div
    className="Ratio "
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="Ratio-ratio "
      style={
        Object {
          "height": 0,
          "paddingTop": "116.66666666666667%",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        className="Ratio-content "
        style={
          Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="FileItem__Thumbnail-sc-1nfnkxh-0 fYiKPw"
        >
          <div
            className="FileItem__IndicatorsContainer-sc-1nfnkxh-3 ikjGki"
          >
            <svg
              aria-labelledby="svg-inline--fa-title-AmJhS9nkhzY7"
              className="svg-inline--fa fa-exclamation-circle fa-w-16 FileItem__IndicatorIcon-sc-1nfnkxh-2 dpSfOx"
              color="var(--error50)"
              data-icon="exclamation-circle"
              data-prefix="fas"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="svg-inline--fa-title-AmJhS9nkhzY7"
                style={Object {}}
              >
                Some error
              </title>
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-star fa-w-18 FileItem__IndicatorIcon-sc-1nfnkxh-2 crcyGx"
              color="var(--accent50)"
              data-icon="star"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 576 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
          <img
            alt=""
            src="  https://picsum.photos/250/250/?random"
          />
          <div
            className="overlay"
          >
            <div
              className="FileItem__IconContainer-sc-1nfnkxh-1 kJsbhR"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star fa-w-18 fa-2x "
                data-icon="star"
                data-prefix="far"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              <p
                className="StyledComponents__TextBlock-sc-1sq26gf-0 hSaDBw"
              >
                Główne
              </p>
            </div>
            <div
              className="FileItem__IconContainer-sc-1nfnkxh-1 kJsbhR"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-trash fa-w-14 fa-2x "
                data-icon="trash"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              <p
                className="StyledComponents__TextBlock-sc-1sq26gf-0 hSaDBw"
              >
                Usuń
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input basic 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="sc-gqjmRU dCpOwF"
    >
      <div
        className="sc-VigVT hHNGvK"
      />
      <input
        className="sc-gZMcBi ivIDqj"
        placeholder="Placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Input disabled + icon 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="sc-gqjmRU dCpOwF"
    >
      <div
        className="sc-VigVT iftfQh"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-search fa-w-16 "
          data-icon="search"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <input
        className="sc-gZMcBi jGLzqV"
        disabled={true}
        placeholder="Placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Input disabled 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="sc-gqjmRU dCpOwF"
    >
      <div
        className="sc-VigVT iftfQh"
      />
      <input
        className="sc-gZMcBi ivIDqj"
        disabled={true}
        placeholder="Placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Input error 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="sc-gqjmRU dCpOwF"
    >
      <div
        className="sc-VigVT hHNGvK"
      />
      <input
        className="sc-gZMcBi inIBpF"
        placeholder="Placeholder"
      />
    </div>
    <div
      className="sc-iwsKbI bHwwIc"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-exclamation-circle fa-w-16 "
        data-icon="exclamation-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
       
      <span>
        Error message
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input icon 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="sc-gqjmRU dCpOwF"
    >
      <div
        className="sc-VigVT hHNGvK"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-search fa-w-16 "
          data-icon="search"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <input
        className="sc-gZMcBi jGLzqV"
        placeholder="Placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Input info 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="sc-gqjmRU dCpOwF"
    >
      <div
        className="sc-VigVT hHNGvK"
      />
      <input
        className="sc-gZMcBi ivIDqj"
        placeholder="Placeholder"
      />
    </div>
    <div
      className="sc-iwsKbI kCXkKZ"
    >
      <span>
        Additional information
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots MultiTextInput basic 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-jzJRlG drjLBx"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container react-select__value-container--is-multi"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Select...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-9-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MultiTextInput custom placeholder 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-jzJRlG drjLBx"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container react-select__value-container--is-multi"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Custom Placeholder Text
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-13-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MultiTextInput disabled 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-jzJRlG drjLBx"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container react-select__value-container--is-multi"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Select...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-10-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MultiTextInput error 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-jzJRlG drjLBx"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container react-select__value-container--is-multi"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Select...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-12-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        />
      </div>
    </div>
    <div
      className="sc-iwsKbI bHwwIc"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-exclamation-circle fa-w-16 "
        data-icon="exclamation-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
       
      <span>
        Error message
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots MultiTextInput info 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-jzJRlG drjLBx"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container react-select__value-container--is-multi"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Select...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-11-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        />
      </div>
    </div>
    <div
      className="sc-iwsKbI kCXkKZ"
    >
      <span>
        Additional info
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea basic 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <textarea
      className="sc-jTzLTM ksJhBF"
      hasError={false}
      hasIcon={false}
      onChange={[Function]}
      placeholder="Placeholder"
      style={
        Object {
          "height": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Textarea disabled 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <textarea
      className="sc-jTzLTM ksJhBF"
      disabled={true}
      hasError={false}
      hasIcon={false}
      onChange={[Function]}
      placeholder="Placeholder"
      style={
        Object {
          "height": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Textarea error 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <textarea
      className="sc-jTzLTM cAFpBd"
      hasError={true}
      hasIcon={false}
      onChange={[Function]}
      placeholder="Placeholder"
      style={
        Object {
          "height": 0,
        }
      }
    />
    <div
      className="sc-iwsKbI bHwwIc"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-exclamation-circle fa-w-16 "
        data-icon="exclamation-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
       
      <span>
        Error message
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea info 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <textarea
      className="sc-jTzLTM ksJhBF"
      hasError={false}
      hasIcon={false}
      onChange={[Function]}
      placeholder="Placeholder"
      style={
        Object {
          "height": 0,
        }
      }
    />
    <div
      className="sc-iwsKbI kCXkKZ"
    >
      <span>
        Additional information
      </span>
    </div>
  </div>
</div>
`;
